test/errors/resolution/tupleDecls.compopts
--detailed-errors # tupleDecls-detailed.good
--no-detailed-errors # tupleDecls-brief.good
